<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KlikB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Done</string>
    <string name="post">Posting</string>
    <string name="in">Bahasa Indonesia</string>
    <string name="en">Bahasa Inggris</string>
    <string name="keluar">Keluar</string>
    <string name="masuk">Masuk</string>
    <string name="profil">Profil</string>
    <string name="thread">Timeline ku</string>
    <string name="bantuan">Bantuan</string>
    <string name="detail">Informasi Detail</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="akun">Akun</string>
    <string name="login">Login</string>
    <string name="registrasi">Registrasi</string>
    <string name="registrasi_underline"><u>Registrasi</u></string>
    <string name="tahun">2014</string>
    <string name="mail">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="baru_password">Kata Sandi Baru</string>
    <string name="konf_password">Konfirmasi Kata Sandi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jekel">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="situs">Situs</string>
    <string name="alamat">Alamat</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="negara">Negara</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="hobi">Hobi</string>
    <string name="biografi">Biografi</string>
    <string name="ubah_password">UBAH KATA SANDI</string>
    <string name="identitas_diri">IDENTITAS DIRI</string>
    <string name="media_sosial">SOSIAL MEDIA</string>
    <string name="tempat_tinggal">TEMPAT TINGGAL</string>
    <string name="lainnya">LAINNYA</string>
    <string name="add_photo">Add Photo</string>
    <string name="makanan">Makanan</string>
    <string name="jalan">Jalan-jalan</string>
    <string name="hiburan">Hiburan</string>
    <string name="hotel">Hotel</string>
    <string name="bisnis">Bisnis</string>
    <string name="lain">Lain</string>
    <string name="klasifikasi">Klasifikasi</string>
    <string name="timeline">Timeline</string>
    <string name="katalog">Katalog</string>
    <string name="retrieveAll">View All</string>
    <string name="kosong">No Post</string>
    <string name="nama_">Nama</string>
    <string name="harga">Harga</string>
    <string name="telpon">Telepon</string>
    <string name="cari">Cari</string>
    <string name="sample_warung">Warung Pasta - Bandung</string>
    <string name="sample_lihat">14</string>
    <string name="sample_desk"><p>Warung pasta adalah tempat kuliner yang sangat elegan dari sisi pelayanan dan makanan. oh iyaa makanannya juga enak dan terjangkau looohh...</p></string>
    <string name="sample_nomor">+62 87543998</string>
    <string name="sample_site">www.warungpasta.com</string>
    <string name="sample_post_time">1 menit yang lalu</string>
    <string name="lihat">Dilihat</string>
    <string name="suka">Suka</string>
    <string name="arah">Petunjuk Jalan</string>
    <string name="deskripsi_title">Dekripsi</string>
    <string name="beri_koment">Beri Komentar</string>
    <string name="review">Review</string>
    <string name="rate">Rate this app</string>
    <string name="mytimeline">Timeline Ku</string>
    <string name="judul">Judul</string>
    <string name="comment">Isi Komentar</string>
    <string name="penilaian">Penilaian</string>
    <string name="tulis">Tulis . . .</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="no_connect">No Internet Connection</string>
    
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
</resources>

