<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aprisma.akirah.bingung.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_action_camera"
        android:showAsAction="always"
        android:title="@string/post"/>
    <item
        android:id="@+id/grid_default_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:searchSuggestAuthority="com.example.MyCustomSuggestionProvider"
        android:searchSuggestSelection="word MATCH ?"
        android:showAsAction="always"
        android:title="@string/cari"/>
    <item
        android:id="@+id/setlang"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/en"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/keluar"/>

</menu>