<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_login"
    android:scrollbarThumbVertical="@drawable/scroll_style"
    tools:context=".RegistrasiActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/header"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/reg_full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/nama_lengkap"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="16sp" />
    
    <EditText
        android:id="@+id/reg_pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/konf_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#FFF36B27"
        android:onClick="Registrasi"
        android:textStyle="bold"
        android:text="@string/registrasi"
        android:textColor="#FFFFFFFF" />
    
    <TextView 
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/tahun"/>

</LinearLayout>