<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroolView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/padding_login"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@drawable/scroll_style"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:background="@drawable/header"
        android:contentDescription="@string/app_name" />
    
    <EditText
        android:id="@+id/etmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@android:drawable/editbox_background_normal"
        android:textSize="16sp"
        android:padding="8dp"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:padding="8dp"
        android:textSize="16sp"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#FFF36B27"
        android:onClick="Login"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="#FFFFFFFF" />
    
    <TextView 
        android:id="@+id/registrasi_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/registrasi_underline"/>
    
    <TextView 
        android:layout_marginTop="@dimen/margin_tahun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/tahun"/>
    
</LinearLayout>