<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f46b27"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="0dip"
                android:layout_height="200dip"
                android:layout_weight="0.5"
                android:contentDescription="@string/sample_warung" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="#80f46b27"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/lihat"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/views"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/sample_lihat"
                    android:textColor="#ffffff"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="#80f46b27"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/suka"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/liked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/sample_lihat"
                    android:textColor="#ffffff"
                    android:textSize="32sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#f46b27"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/getMap"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableBottom="@drawable/ic_action_directions"
                android:text="@string/arah"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/setLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableBottom="@drawable/ic_action_good"
                android:text="@string/suka"
                android:textColor="#ffffff" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#C6541F" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/titik2"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/nama_posting"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_warung"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/titik2"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/alamat_post"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_warung"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telpon"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/titik2"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/telp_posting"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_nomor"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/situs"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/titik2"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/situs_posting"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="#8037405D"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:text="@string/deskripsi_title"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/isi_posting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="fill"
                android:text="@string/sample_desk"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="#37405D"
            android:orientation="vertical" >

            <Button
                android:id="@+id/createComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableBottom="@drawable/ic_action_new_label"
                android:onClick="comment"
                android:text="@string/beri_koment"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/abc_action_bar_title_text_size"
                android:background="#50a02065"
                android:text="@string/review"
                android:textColor="#ffffff"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/koment_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>