<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:background="#50a02065"
    android:orientation="vertical"
    android:padding="@dimen/abc_action_bar_icon_vertical_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_coment"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_width"
                android:contentDescription="@string/review"
                android:src="#a02065" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nama_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/waktu_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_post_time"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/isi_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_desk"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>